# spleeterpp

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  appveyor.yml
cmake/: add_absl.cmake  add_eigen.cmake  add_googletest.cmake  add_protobuf.cmake  add_pybind11.cmake  add_rtff.cmake  add_spleeter.cmake  add_spleeter_models.cmake  add_tensorflow.cmake  add_wave.cmake  export_spleeter_filter_models.py  export_spleeter_models.cmake  export_spleeter_models.py  runtime.cmake
cmake/patches/: spleeter.patch
docs/: Dockerfile  Doxyfile  requirements.txt
docs/source/: build.rst  conf.py  filter.rst  how_it_works.rst  index.rst  offline.rst  reference.rst
docs/xml/: classspleeter_1_1Filter.xml  classspleeter_1_1Filter_1_1Impl.xml  classspleeter_1_1Registry.xml  classspleeter_1_1TFHandle.xml  classspleeter_1_1internal_1_1Adapter.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_960157c8da09d6d02f997f6b381aed41.xml  dir_b5c8968fdc860107d345181a35ebb53d.xml  dir_cf8dda79de50e3e42e3b1f531732fb91.xml  filter_2model_8cc.xml  filter_2model_8h.xml  filter_8cc.xml  filter_8h.xml  index.xml  model_8cc.xml  model_8h.xml  namespacespleeter.xml  namespacespleeter_1_1internal.xml  registry_8cc.xml  registry_8h.xml  spleeter_8cc.xml  spleeter_8h.xml  spleeter__common_8cc.xml  spleeter__common_8h.xml  tensor_8cc.xml  tensor_8h.xml  tf__handle_8cc.xml  tf__handle_8h.xml  type_8h.xml
src/: CMakeLists.txt
src/artff/: CMakeLists.txt  abstract_filter.cc  abstract_filter.h  mixing_filter.cc  mixing_filter.h  semaphore.cc  semaphore.h
src/artff/buffer/: circular_frame_buffer.cc  circular_frame_buffer.h  circular_future_buffer.cc  circular_future_buffer.h
src/example/: CMakeLists.txt  main.cc
src/olspleeter/: CMakeLists.txt  filter.cc  filter.h
src/spleeter/: CMakeLists.txt  filter.cc  filter.h  main.x.cc  model.cc  model.h  registry.cc  registry.h  spleeter.cc  spleeter.h  spleeter.hxx  tensor.cc  tensor.h  tf_handle.cc  tf_handle.h  type.h
src/spleeter++/: CMakeLists.txt  spleeter++.cc  spleeter++.h
src/spleeter/tensor/: copy.cc  copy.h
src/spleeter_common/: CMakeLists.txt  registry.cc  registry.h  spleeter_common.cc  tf_handle.cc
src/spleeter_filter/: CMakeLists.txt  filter.cc  filter.h  model.cc  model.h  registry.cc  registry.h  spleeter.cc  spleeter.h  tensor.cc  tensor.h  tensor_helper.cc  tensor_helper.h  tf_handle.cc  tf_handle.h
src/spleeter_filter/tensor/: copy.h
src/tensor/: CMakeLists.txt  copy.cc  copy.h
test/: CMakeLists.txt
test/artff/: CMakeLists.txt  test_artff.cc
test/olspleeter/: CMakeLists.txt  test_olspleeter.cc
test/spleeter/: CMakeLists.txt  test_loader.cc  test_spleeter.cc
test/spleeter++/: CMakeLists.txt  setup.cc  test_basic.cc  test_load.cc  test_separate.cc
test/spleeter_filter/: CMakeLists.txt  test_spleeter.cc
